[package]
name = "incomedivider-desktop"
version = "0.1.0"
authors = ["Travis Rodgers <travisdotmedia@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"
